--- a/generator/package.json
+++ b/generator/package.json
@@ -16,7 +16,8 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongodb": "^4.2.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "popups": "^1.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
